--- a/views/index.ejs
+++ b/views/index.ejs
@@ -107,21 +107,20 @@
                         <br/>Completely optional and this bot will
                                                 							remain free!</p>
                     <h3>Donations Greatly Appreciated!</h3>
-                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-                        <input type="hidden" name="cmd" value="_donations"/>
-                        <input type="hidden" name="business" value="C2BBV3G6SNJPQ"/>
-                        <input type="hidden" name="currency_code" value="USD"/>
-                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button"/>
-                        <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1"/>
-                    </form>
                     <h3><a href="https://paypal.me/roguestockbot" target="_blank">paypal.me/roguestockbot</a></h3>
-                    <br>
                     <h3>Bitcoin Address</h3>
                     <h4>19y7NK4Vn3G645c3w9VcyepU6qhBvi8ZDh</h4>
                     <br>
                     <hr/>
                     <!-- Updates -->
                     <h3>Updates</h3>
+
+                    <h4>6/7 8PM EST</h4>
+					<h4>v 2.1</h4>
+                    <ul style="list-style-position: inside; text-align:left; margin: 0 4em 2em 4em;">
+                        <li>Fixed errors and updated to SQL database</li>
+                        <li>Added new items</li>
+                    </ul>
 
                     <h4>5/27 11PM EST</h4>
 					<h4>v 2.0</h4>
@@ -171,8 +170,8 @@
                     <div class="features-row">
                         <section>
                             <span class="icon solid major fa-th-large accent4"></span>
-                            <h3>4 Item Limit</h3>
-                            <p>Limits users to four items and prevents server from overloading.</p>
+                            <h3>10 Item Limit</h3>
+                            <p>Limits users to 10 items and prevents server from overloading.</p>
                         </section>
                         <section>
                             <span class="icon solid major fa-unlock-alt accent5"></span>
